// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator - github-build-matrix > with ios > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "dev",
      "docker-services": "true",
      "java-version": "17",
      "job-name": "21points-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "macos-15",
      "sample": "21points-jwt",
      "sample-type": "jdl",
      "samples-group": "ios",
    },
    {
      "default-environment": "dev",
      "docker-services": "true",
      "java-version": "17",
      "job-name": "app-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "macos-15",
      "sample": "app-jwt",
      "sample-type": "jdl",
      "samples-group": "ios",
    },
    {
      "default-environment": "prod",
      "docker-services": "false",
      "java-version": "17",
      "job-name": "app-oauth2",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "macos-13",
      "sample": "app-oauth2",
      "sample-type": "jdl",
      "samples-group": "ios",
      "skip-e2e": "true",
    },
    {
      "default-environment": "dev",
      "docker-services": "true",
      "java-version": "17",
      "job-name": "app-websocket",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "macos-15",
      "sample": "app-websocket",
      "sample-type": "jdl",
      "samples-group": "ios",
    },
    {
      "default-environment": "dev",
      "docker-services": "true",
      "java-version": "17",
      "job-name": "flickr2-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "macos-15",
      "sample": "flickr2-jwt",
      "sample-type": "jdl",
      "samples-group": "ios",
    },
  ],
}
`;

exports[`generator - github-build-matrix > with samples > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "21points-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "ubuntu-latest",
      "sample": "21points-jwt",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "app-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "ubuntu-latest",
      "sample": "app-jwt",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "app-oauth2",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "ubuntu-latest",
      "sample": "app-oauth2",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "app-websocket",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "ubuntu-latest",
      "sample": "app-websocket",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "flickr2-jwt",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.15.0",
      "npm-version": "11.3.0",
      "os": "ubuntu-latest",
      "sample": "flickr2-jwt",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
  ],
}
`;
